<resources>
    <string name="app_name">www</string>

    <!-- Home -->
    <string name="home_add">새로운 약속을 생성할래요</string>
    <string name="home_join">초대받은 코드로 입장할래요</string>
    <string-array name="home_tab">
        <item>진행 중 약속</item>
        <item>종료된 약속</item>
    </string-array>
    <string name="home_meeting_unconfirmed">미확정</string>
    <string name="home_meeting_date_and_time">%s %s• %s</string>


    <!-- add / join -->
    <string name="add_join_pages">%d/%d</string>

    <!-- info name -->
    <string name="info_name_title">약속방의\n이름을 알려주세요.</string>
    <string name="info_name_hint">약속방 이름 입력</string>

    <!-- info user name -->
    <string name="info_user_name_title">약속방에서 사용하실\n닉네임을 알려주세요.</string>
    <string name="info_user_name_hint">닉네임 입력</string>

    <!-- info capacity -->
    <string name="info_capacity_title">최소 인원을 설정해 주세요.</string>
    <string name="info_capacity_subtitle">최소 인원 입장 완료 시, 투표가 시작됩니다.</string>

    <!-- info period -->
    <string name="info_period_title">약속 날짜의 범위를 정해주세요.</string>
    <string name="info_period_subtitle">약속 날짜 범위 내에서 가능한 날짜를 투표하게 됩니다. </string>
    <string name="info_period_subtitle_selected">%d월 %d일 (%s)</string>
    <string name="info_period_warning_14">14일 이내로 선택할 수 있어요</string>
    <string name="info_period_warning_end_start">끝 날짜는 시작 날짜 이후로 선택할 수 있어요</string>

    <!-- info date -->
    <string name="info_date_title">가능한 시간대를 선택해주세요.</string>
    <string name="info_date_empty">선택한 시간대가 없습니다.</string>
    <string name="info_date_morning">아침🥚</string>
    <string name="info_date_lunch">낮🔅</string>
    <string name="info_date_dinner">저녁🌙</string>
    <string name="info_date_night">밤🍻</string>
    <string name="info_date_morning_time">06–10시</string>
    <string name="info_date_lunch_time">11–16시</string>
    <string name="info_date_dinner_time">17–20시</string>
    <string name="info_date_night_time">21–24시</string>

    <!-- info place -->
    <string name="info_place_title">원하는 장소를 입력해 주세요.</string>
    <string name="info_place_subtitle">*필수 항목이 아니에요.</string>
    <string name="info_place_hint">장소 입력</string>
    <string name="info_place_list">등록된 장소 후보</string>
    <string name="info_place_duplicate">동일한 장소 후보가 존재해요.</string>
    <string name="info_place_warning_join">방에 참여할 수 없어요</string>

    <!-- info code -->
    <string name="info_code_title">친구에게 받은\n참여 코드를 입력해주세요.</string>
    <string name="info_code_hint">참여 코드 입력</string>
    <string name="info_code_warning">존재하지 않는 참여 코드에요.</string>
    <string name="info_code_warning_is_joined">이미 참여한 약속방이에요.</string>

    <!-- meeting share -->
    <string name="meeting_share_title">함께할 친구들을 초대해 보세요.</string>
    <string name="meeting_share_subtitle">약속방 만들기</string>
    <string name="meeting_share_subtitle_second">가 완료되었어요!</string>
    <string name="meeting_share_link">링크 복사하기</string>
    <string name="meeting_share_code">코드 복사하기</string>
    <string name="meeting_share_next">약속방으로 가기</string>

    <!-- meeting detail -->
    <string name="meeting_detail_subtitle">%d/%d 입장 중</string>
    <string name="meeting_detail_subtitle_complete">%d/%d 입장</string>
    <string name="meeting_detail_when">언제</string>
    <string name="meeting_detail_where">어디서</string>
    <string name="meeting_detail_start_voting">투표 시작하기</string>
    <string name="meeting_detail_go_to_vote">투표 하러가기</string>
    <string name="meeting_detail_vote">투표하기</string>
    <string name="meeting_detail_voted">투표 완료</string>
    <string name="meeting_detail_confirm">확정 완료</string>
    <string name="meeting_detail_vote_count">%d명 참여</string>
    <string name="meeting_detail_voting_count">%d명 참여 중</string>
    <string name="meeting_detail_voted_count">%d명 참여 완료</string>
    <string name="meeting_detail_rank_count">%d명</string>

    <!-- common -->
    <string name="button_next">다음</string>
    <string name="button_skip">스킵할래요</string>
    <string name="empty_text"> </string>
    <string name="number">%d</string>
    <string name="sunday_short">일</string>
    <string name="monday_short">월</string>
    <string name="tuesday_short">화</string>
    <string name="wednesday_short">수</string>
    <string name="thursday_short">목</string>
    <string name="friday_short">금</string>
    <string name="saturday_short">토</string>
    <string name="minus"> - </string>
    <string name="string_blank_string">%s %s</string>
    <string name="copy_link_success">링크가 복사되었습니다.</string>
    <string name="copy_link_fail">링크 복사에 실패하였습니다.</string>
    <string name="copy_code_success">코드가 복사되었습니다.</string>
    <string name="copy_code_fail">코드 복사에 실패하였습니다.</string>


    <!-- System -->
    <string name="system_dialog_alarm">경고, 사운드 및 아이콘 배지가 알림에\n포함될 수 있습니다. 설정에서 이를\n구성할 수 있습니다.</string>
    <string name="system_top_bar">설정</string>
    <string name="system_dialog_no">허용 안 함</string>
    <string name="system_dialog_yes">허용</string>

    <!-- SnackBar Go Vote-->
    <string name="button_goto_vote">투표하러 가기</string>
    <string name="snackbar_govote_tv1">투표가 시작됐어요</string>

    <string name="snackbar_govote_tv2_1">지금 바로</string>
    <string name="snackbar_govote_tv2_2_color">원하는 장소에 투표</string>
    <string name="snackbar_govote_tv3">해주세요</string>

    <!-- SnackBar Enter Room -->
    <string name="snackbar_enterroom_tv">방의 투표가 마감됐어요</string>
    <string name="snackbar_enterroom_tv1_1">장소와 시간을 </string>
    <string name="snackbar_enterroom_tv1_2">확정</string>
    <string name="snackbar_enterroom_tv1_3">하러 가볼까요?</string>
    <string name="snackbar_enterroom_tv1_4">약속방 입장하기</string>

    <!-- dialog vote -->
    <string name="tv1_dialog_vote">투표를 종료하시겠어요?</string>
    <string name="tv2_dialog_vote">투표가 종료되면 재투표는 불가능해요</string>
    <string name="tv3_dialog_vote">관둘래요</string>
    <string name="tv4_dialog_vote">네, 시작할래요</string>


    <!-- www notification channel-->
    <string name="www_notification_channel_name">WWW: 언제어디서뭐해 Channel</string>
    <string name="www_notification_channel_description">WWW: 언제어디서뭐해 앱의 알림을 위한 Channel입니다.</string>

    <!-- tablayout title -->
    <string name="tab_title_ongoing">진행 중 약속</string>
    <string name="tab_title_finish">종료된 약속</string>

    <!-- item indicator -->
    <string name="indicator_vote_ing">투표 중</string>
    <string name="indicator_ex_vote">투표 시작 전</string>
    <string name="indicator_d_day">D%s</string>
    <string name="indicator_count">%d/%d명</string>


    <!-- onGoing text -->
    <string name="tv_ongoing_meeting_empty">아직 진행 중인 약속이 없어요!</string>
    <string name="tv_done_meeting_empty">종료된 약속이 없어요!</string>


    <!-- floating btn text -->
    <string name="btn_floating_tv1">새로운 약속 생성하기</string>
    <string name="btn_floating_tv2">초대코드로 입장하기</string>

    <!-- Meeting Statue -->
    <string name="meeting_status1">WAITING</string>
    <string name="meeting_status2">VOTING</string>
    <string name="meeting_status3">VOTED</string>
    <string name="meeting_status5">CONFIRMED</string>
    <string name="meeting_status4">DONE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- OnBoard -->
    <string name="btn_mockup">시작하기</string>
    <string name="mockup1_1">편리한 약속 관리</string>
    <string name="mockup1_2">여러 개의 약속 일정,한 눈에 파악하고 살펴보기</string>
    <string name="mockup2_1">복잡한 약속 조율을 한번에</string>
    <string name="mockup2_2">원하는 약속 시간과 장소 편리하게 투표하기</string>
    <string name="mockup3_1">실시간으로 투표 현황 확인</string>
    <string name="mockup3_2">약속방 참가자들의 투표 결과 확인하기</string>
    <string name="mockup4_1">알림으로 약속 리마인드</string>
    <string name="mockup4_2">빠르게 약속을 정할 수 있도록 알림 받기</string>

    <!-- meeting detail user list -->
    <string name="meeting_detail_users_title">약속방 참여자</string>
    <string name="meeting_detail_voting_users_title">투표 참여자</string>
    <string name="meeting_detail_users_header_count">%d명</string>

    <!-- setting -->
    <string name="setting_developer_mail">whenwherewhat.official@gmail.com</string>

    <!-- update -->
    <string name="update_dialog">업데이트 버전이 있습니다! \n플레이스토어로 이동하시겠습니까?</string>
</resources>