<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_mockup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/mock1_onboard"
            android:layout_marginTop="@dimen/size_43"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv2_mockup"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv1_mockup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mockup1_1"
            android:layout_marginTop="@dimen/size_25"
            style="@style/Text.OnBoard1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv2_mockup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mockup1_2"
            android:layout_marginTop="@dimen/size_10"
            style="@style/Text.Body4"
            android:textColor="@color/gray_400"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv1_mockup"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="@dimen/size_500"
            android:layout_marginStart="@dimen/size_20"
            android:layout_marginEnd="@dimen/size_20"
            style="@style/Text.Body1"
            android:text="@string/btn_mockup"
            android:textColor="@color/www_white"
            android:background="@drawable/btn_onboarding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/iv_mockup1"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>