<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.promiseeight.www.ui.meeting.InfoViewModel" />

        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            style="@style/Text.Heading3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_20"
            android:layout_marginTop="@dimen/size_40"
            android:text="@string/info_name_title"
            android:textColor="@color/www_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_info_name"
            style="@style/Text.Body4"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_52"
            android:layout_marginHorizontal="@dimen/size_20"
            android:layout_marginTop="@dimen/size_32"
            android:background="@drawable/rectangle_white_border_gray200_radius_30"
            android:hint="@string/info_name_hint"
            android:inputType="text"
            android:maxLines="1"
            android:maxLength="16"
            android:paddingStart="@dimen/size_20"
            android:paddingEnd="@dimen/size_38"
            android:text="@={viewModel.meetingName}"
            app:layout_constraintBottom_toTopOf="@+id/btn_next"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_close"
            android:layout_width="@dimen/size_16_padding_8"
            android:layout_height="@dimen/size_16_padding_8"
            android:layout_marginEnd="@dimen/size_12"
            android:padding="8dp"
            android:src="@drawable/ic_close_gray"
            android:visibility="@{viewModel.meetingName.blank ? View.INVISIBLE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="@id/et_info_name"
            app:layout_constraintEnd_toEndOf="@id/et_info_name"
            app:layout_constraintTop_toTopOf="@id/et_info_name" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next"
            style="@style/Button.Basic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size_20"
            android:layout_marginBottom="@dimen/size_38"
            android:text="@string/button_next"
            android:enabled="@{!viewModel.meetingName.blank}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_info_name" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>