<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.promiseeight.www.ui.meeting.InfoViewModel" />

        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            style="@style/Text.Heading3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_20"
            android:layout_marginTop="@dimen/size_40"
            android:text="@string/info_date_title"
            android:textColor="@color/www_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_subtitle"
            style="@style/Text.Body4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_6"
            android:textColor="@color/gray_450"
            app:layout_constraintStart_toStartOf="@id/tv_title"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <!-- ViewPager 넣는 곳 -->


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_selected_date"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_56"
            android:layout_marginHorizontal="@dimen/size_20"
            android:layout_marginBottom="@dimen/size_18"
            android:background="@drawable/rectangle_white_border_gray100_radius_10"
            android:clipToPadding="true"
            android:paddingVertical="@dimen/size_11"
            android:paddingHorizontal="@dimen/size_14"
            app:layout_constraintBottom_toTopOf="@id/btn_next" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_selected_date"
            style="@style/Text.Body4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size_20"
            android:text="@string/info_date_empty"
            android:textColor="@color/gray_550"
            android:visibility="@{viewModel.meetingDateCandidates.empty ? View.VISIBLE : View.INVISIBLE }"
            app:layout_constraintBottom_toBottomOf="@id/rv_selected_date"
            app:layout_constraintStart_toStartOf="@id/rv_selected_date"
            app:layout_constraintTop_toTopOf="@id/rv_selected_date" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next"
            style="@style/Button.Basic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size_20"
            android:layout_marginBottom="@dimen/size_38"
            android:text="@string/button_next"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</layout>